<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, NotificationShowcaseActivity!</string>
    <string name="app_name">NotificationShowcase</string>
    <string name="post_button_label">Post Notifications</string>
    <string name="remove_button_label">Remove Notifications</string>
    <string name="prefs_button_label">Preferences</string>
    <string name="disable_button_label">Disable Notifications</string>
    <string name="enable_button_label">Enable Notifications</string>
    <string name="no_button_label">No Idea Dog</string>
    <string name="answered">call answered</string>
    <string name="ignored">call ignored</string>
    <string name="full_screen_name">Full Screen Activity</string>
    <string name="sms_click">Clicked on bigText</string>
    <string name="sms_reply">reply</string>
    <string name="sms_sender">Mike Cleron</string>
    <string name="sms_message">Hey, looks like I\'m getting kicked out of this
        conference room, so stay in the hangout and I\'ll rejoin in about
        5-10 minutes. If you don\'t see me, assume I got pulled into another
        meeting. And now\u2026 I have to find my shoes.
    </string>

    <string name="upload_click">Clicked on Upload</string>
    <string name="upload_title">File Upload</string>
    <string name="upload_text">foo.txt</string>

    <string name="call_title">Incoming call</string>
    <string name="call_text">Matias Duarte</string>
    <string name="call_answer">Answer</string>
    <string name="call_ignore">Ignore</string>

    <string name="timer_click">Clicked on Stopwatch</string>
    <string name="timer_title">Stopwatch PRO</string>
    <string name="timer_text">Counting up</string>

    <string name="calendar_click">Clicked on calendar event</string>
    <string name="calendar_title">J Planning</string>
    <string name="calendar_text">The Botcave</string>
    <string name="calendar_10">+10 min</string>
    <string name="calendar_10_click">snoozed 10 min</string>
    <string name="calendar_60">+1 hour</string>
    <string name="calendar_60_click">snoozed 1 hr</string>

    <string name="picture_click">Clicked on bigPicture</string>
    <string name="picture_add_click">added! (just kidding)</string>
    <string name="picture_title">Romain Guy</string>
    <string name="picture_text">I was lucky to find a Canon 5D Mk III at a
        local Bay Area store last week but I had not been able to try it in the
        field until tonight. After a few days of rain the sky finally cleared
        up. Rockaway Beach did not disappoint and I was finally able to see
        what my new camera feels like when shooting landscapes.
    </string>
    <string name="picture_add">Add to Gallery</string>
    <string name="picture_sub_text">talk rocks!</string>

    <string name="email_click">Clicked on Email</string>
    <string name="email_title">24 new messages</string>
    <string name="email_text">You have mail!</string>
    <string name="email_sub_text">test.hugo2@gmail.com</string>
    <string name="email_c"><b>Charlie</b>: I see you!</string>
    <string name="email_a"><b>Alice</b>: hey there!</string>
    <string name="email_b"><b>Bob</b>: hi there!</string>

    <string name="social_click">Clicked on Social</string>
    <string name="social_title">Social</string>
    <string name="social_text">New mentions</string>

    <string name="pref_title_enable">Enable</string>

    <string name="pref_title_global">Global</string>
    <string name="pref_title_global_fade">Fade Away</string>
    <string name="pref_summary_global_fade">Automatically remove notifications after a short time</string>

    <string name="pref_title_sms">SMS Example</string>
    <string name="pref_summary_sms_enable">Enable the SMS example</string>
    <string name="pref_title_sms_sound">Ringtone</string>
    <string name="pref_title_sms_noisy">Noise</string>
    <string name="pref_summary_sms_noisy">Allow the SMS example to be noisy</string>
    <string name="pref_title_sms_buzzy">Vibration</string>
    <string name="pref_summary_sms_buzzy">Allow the SMS example to vibrate</string>
    <string name="pref_title_sms_priority">SMS Priority</string>
    <string name="pref_title_sms_once">Alert Only Once</string>
    <string name="pref_summary_sms_once">Updates should not interrupt the user.</string>
    <string name="pref_title_sms_person">SMS Person</string>
    <string name="pref_summary_sms_person">Add a person to the SMS notification</string>

    <string name="pref_title_phone">Phone Example</string>
    <string name="pref_summary_phone_enable">Enable the phone notification</string>
    <string name="pref_title_phone_noisy">Noise</string>
    <string name="pref_summary_phone_noisy">Allow the phone example to be noisy</string>
    <string name="pref_title_phone_fullscreen">Fullscreen</string>
    <string name="pref_summary_phone_fullscreen">Add a fullscreen intent</string>
    <string name="pref_title_phone_person">Phone Person</string>
    <string name="pref_summary_phone_person">Add a person to the phone notification</string>

    <string name="pref_title_upload">Upload Example</string>
    <string name="pref_summary_upload_enable">Enable the upload notification</string>

    <string name="pref_title_timer">Timer Example</string>
    <string name="pref_summary_timer_enable">Enable the timer notification</string>

    <string name="pref_title_calendar">Calendar Example</string>
    <string name="pref_summary_calendar_enable">Enable the calendar notification</string>

    <string name="pref_title_picture">Picture Example</string>
    <string name="pref_summary_picture_enable">Enable the big picture notification</string>

    <string name="pref_title_inbox">Email Example</string>
    <string name="pref_summary_inbox_enable">Enable the email notification</string>

    <string name="pref_title_social">Social Example</string>
    <string name="pref_summary_social_enable">Enable the social notification</string>

    <string-array name ="priority_names">
      <item>maximum</item>
      <item>high</item>
      <item>default</item>
      <item>low</item>
      <item>minimum</item>
    </string-array>

    <string-array name="priority_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>

    <string name="hang_up_button_label">hang up</string>
</resources>
