<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
            android:title="@string/pref_title_global"
            android:key="pref_key_global_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_global_fade"
            android:summary="@string/pref_summary_global_fade"
            android:title="@string/pref_title_global_fade"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
            android:title="@string/pref_title_sms"
            android:key="pref_key_sms_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_sms_enable"
            android:summary="@string/pref_summary_sms_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_sms_noisy"
            android:dependency="pref_key_sms_enable"
            android:summary="@string/pref_summary_sms_noisy"
            android:title="@string/pref_title_sms_noisy"
            android:defaultValue="true" />
      <RingtonePreference
            android:persistent="true"
            android:key="pref_key_sms_sound"
            android:dependency="pref_key_sms_enable"
            android:ringtoneType="notification"
            android:title="@string/pref_title_sms_sound" />
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_sms_buzzy"
            android:dependency="pref_key_sms_enable"
            android:summary="@string/pref_summary_sms_buzzy"
            android:title="@string/pref_title_sms_buzzy"
            android:defaultValue="true" />
    <ListPreference android:key="pref_key_sms_priority"
            android:persistent="true"
            android:dependency="pref_key_sms_enable"
            android:title="@string/pref_title_sms_priority"
            android:entries="@array/priority_names"
            android:entryValues="@array/priority_values"
            android:defaultValue="0"/>
      <CheckBoxPreference
              android:persistent="true"
              android:key="pref_key_sms_once"
              android:dependency="pref_key_sms_enable"
              android:summary="@string/pref_summary_sms_once"
              android:title="@string/pref_title_sms_once"
              android:defaultValue="true" />
    <CheckBoxPreference
            android:persistent="true"
            android:dependency="pref_key_sms_enable"
            android:key="pref_key_sms_person"
            android:summary="@string/pref_summary_sms_person"
            android:title="@string/pref_title_sms_person"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_phone"
        android:key="pref_key_phone_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_phone_enable"
            android:summary="@string/pref_summary_phone_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_phone_noisy"
            android:dependency="pref_key_phone_enable"
            android:summary="@string/pref_summary_phone_noisy"
            android:title="@string/pref_title_phone_noisy"
            android:defaultValue="true" />
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_phone_fullscreen"
            android:dependency="pref_key_phone_enable"
            android:summary="@string/pref_summary_phone_fullscreen"
            android:title="@string/pref_title_phone_fullscreen"
            android:defaultValue="true" />
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_phone_person"
            android:dependency="pref_key_phone_enable"
            android:summary="@string/pref_summary_phone_person"
            android:title="@string/pref_title_phone_person"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_upload"
        android:key="pref_key_upload_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_upload_enable"
            android:summary="@string/pref_summary_upload_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_timer"
        android:key="pref_key_timer_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_timer_enable"
            android:summary="@string/pref_summary_timer_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_calendar"
        android:key="pref_key_calendar_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_calendar_enable"
            android:summary="@string/pref_summary_calendar_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_picture"
        android:key="pref_key_picture_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_picture_enable"
            android:summary="@string/pref_summary_picture_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_inbox"
        android:key="pref_key_inbox_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_inbox_enable"
            android:summary="@string/pref_summary_inbox_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
        android:title="@string/pref_title_social"
        android:key="pref_key_social_settings">
    <CheckBoxPreference
            android:persistent="true"
            android:key="pref_key_social_enable"
            android:summary="@string/pref_summary_social_enable"
            android:title="@string/pref_title_enable"
            android:defaultValue="true" />
  </PreferenceCategory>
</PreferenceScreen>
